--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.0'
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.4.0'
+    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
+    compile 'com.github.traex.rippleeffect:library:1.2.3'
 }
