--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.github.ksoichiro:android-observablescrollview:1.4.0'
+    //compile 'com.github.ksoichiro:android-observablescrollview:1.4.0'
     compile 'com.skyfishjy.ripplebackground:library:1.0.1'
     compile 'com.github.traex.rippleeffect:library:1.2.3'
+    compile 'com.android.support:cardview-v7:21.0.+'
 }
